@@ -73,6 +73,7 @@ tools-no-deposit=No deposit found containing __1__
 tools-no-resource-selected=No resource is selected.
 tools-cannot-afford-obliviation=Cannot afford! Obliviating this much __1__ costs __2__x [item=coin]
 upgrades-can-be-toggled=This effect can be toggled.
+upgrades-is-disabled=This effect is disabled by default.
 upgrades-unlock=Unlock
 upgrades-unlocked=Unlocked
 upgrade-requirement-not-met=Upgrade requirement not met.
